--- a/login/sign-up/index.html
+++ b/login/sign-up/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Passwort zurücksetzen - BEWÄSY</title>
+    <link rel="icon" type="image/x-icon" href="../../files/images/logo.svg">
 </head>
 <body>
     Das funktioniert leider noch nicht. Schreib uns doch eine <a href="mailto:johannes.kuerz@gmx.de">Email</a>.
